# claude-session-budget

./: .env.example  .gitignore  LICENSE  README.md  _budget_core.py  budget_check.py  calibrate.py  install.sh  pyproject.toml  session_budget_manager.py  setup.cfg
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
Formula/: claude-session-budget.rb
docs/: internals.md
hooks/: hooks.json
scripts/: __init__.py  _budget_core.py  auto_calibrate.py  budget_check.py  calibrate.py  session_budget_manager.py
skill/: SKILL.md
skills/budget-check/: SKILL.md
tests/: test_budget_core.py  test_session_budget_manager.py
