[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-session-budget"
version = "1.2.4"
description = "Track Claude Code's 5-hour session usage from local JSONL and pause tool calls before hitting the limit. No API calls, no network."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Taehyung Kim"},
]
keywords = ["claude", "claude-code", "session", "budget", "rate-limit", "hook", "pretooluse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
# Windows-only: enables auto-calibration's `claude /usage` capture on
# Windows. POSIX users don't need this — stdlib `pty` covers them.
# Install via:  pip install "claude-session-budget[windows]"
windows = [
    'pywinpty >= 2.0; sys_platform == "win32"',
]

[project.urls]
Homepage = "https://github.com/Star001-KR/claude-session-budget"
Repository = "https://github.com/Star001-KR/claude-session-budget"
Issues = "https://github.com/Star001-KR/claude-session-budget/issues"

[project.scripts]
budget-check = "claude_session_budget.budget_check:main"
budget-calibrate = "claude_session_budget.calibrate:main"
budget-auto-calibrate = "claude_session_budget.auto_calibrate:main"

[tool.setuptools]
package-dir = {"claude_session_budget" = "scripts"}
packages = ["claude_session_budget"]
