# Mirror of pyproject.toml [project] for setuptools < 61, which does not
# read PEP 621 [project] tables. setuptools >= 61 prefers [project] and
# ignores this file. Keep both in sync when bumping version or metadata.
[metadata]
name = claude-session-budget
version = 1.2.4
description = Track Claude Code's 5-hour session usage from local JSONL and pause tool calls before hitting the limit. No API calls, no network.
long_description = file: README.md
long_description_content_type = text/markdown
author = Taehyung Kim
license = MIT
license_files = LICENSE
url = https://github.com/Star001-KR/claude-session-budget
project_urls =
    Homepage = https://github.com/Star001-KR/claude-session-budget
    Repository = https://github.com/Star001-KR/claude-session-budget
    Issues = https://github.com/Star001-KR/claude-session-budget/issues
keywords = claude, claude-code, session, budget, rate-limit, hook, pretooluse
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development
    Topic :: System :: Monitoring

[options]
python_requires = >=3.9
package_dir =
    claude_session_budget = scripts
packages = claude_session_budget

[options.extras_require]
windows =
    pywinpty >= 2.0; sys_platform == "win32"

[options.entry_points]
console_scripts =
    budget-check = claude_session_budget.budget_check:main
    budget-calibrate = claude_session_budget.calibrate:main
    budget-auto-calibrate = claude_session_budget.auto_calibrate:main
